; ModuleID = '/home/carl/AnghaBench/linux/drivers/opp/extr_core.c__add_opp_dev.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/opp/extr_core.c__add_opp_dev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.opp_device = type { i32 }
%struct.device = type { i32 }
%struct.opp_table = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.opp_device* @_add_opp_dev(%struct.device* %0, %struct.opp_table* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.opp_table*, align 8
  %5 = alloca %struct.opp_device*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store %struct.opp_table* %1, %struct.opp_table** %4, align 8
  %6 = load %struct.opp_table*, %struct.opp_table** %4, align 8
  %7 = getelementptr inbounds %struct.opp_table, %struct.opp_table* %6, i32 0, i32 0
  %8 = call i32 @mutex_lock(i32* %7)
  %9 = load %struct.device*, %struct.device** %3, align 8
  %10 = load %struct.opp_table*, %struct.opp_table** %4, align 8
  %11 = call %struct.opp_device* @_add_opp_dev_unlocked(%struct.device* %9, %struct.opp_table* %10)
  store %struct.opp_device* %11, %struct.opp_device** %5, align 8
  %12 = load %struct.opp_table*, %struct.opp_table** %4, align 8
  %13 = getelementptr inbounds %struct.opp_table, %struct.opp_table* %12, i32 0, i32 0
  %14 = call i32 @mutex_unlock(i32* %13)
  %15 = load %struct.opp_device*, %struct.opp_device** %5, align 8
  ret %struct.opp_device* %15
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local %struct.opp_device* @_add_opp_dev_unlocked(%struct.device*, %struct.opp_table*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
